--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 
 html,
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Inconsolata', 'Microsoft JhengHei', Arial, Helvetica, sans-serif, monospace;
 }
 
