--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inconsolata', 'Microsoft JhengHei', Arial, Helvetica, sans-serif, monospace;
+  overflow: hidden;
 }
 
 #img {
